:coffin: remove GET /api/meals/{day}
